Use specific stylus version
See [this issue](https://github.com/stylus/stylus/issues/1995)

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "broccoli-stylus-single": "^0.4.1",
-    "stylus": "0.x"
+    "stylus": "0.52.0"
   },
   "repository": {
     "type": "git",
